# arib2bdnxml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs  meson.build
.github/workflows/: release.yml
scripts/: package-release.sh  windows-dist-NOTICE.txt
src/: bdn.rs  bdn_xml_generator.cpp  bdn_xml_generator.hpp  bitmap.rs  bitmap_processor.cpp  bitmap_processor.hpp  config.rs  ffmpeg.rs  ffmpeg_sys.rs  ffmpeg_wrapper.cpp  ffmpeg_wrapper.hpp  main.cpp  main.rs  options.cpp  options.hpp  options.rs
