[package]
name = "arib2bdnxml"
version = "0.2.0"
edition = "2021"
description = "Extract ARIB subtitles from .ts/.m2ts/.mkv/.mks and generate BDN XML + PNG using libaribcaption (via FFmpeg)"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
png = "0.17"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
